#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([fptree], [0.1], [hyperair@gmail.com])
AC_CONFIG_SRCDIR([src/transactions.hh])

AM_INIT_AUTOMAKE([foreign dist-zip])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_CXX

AC_TYPE_SIZE_T

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
